--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>Ticket Dashboard</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn-icons-png.freepik.com/512/6030/6030249.png"
+    />
   </head>
   <body>
     <app-root></app-root>
